<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.ConnectWayFragment">

    <TextView
        android:id="@+id/guideline_text_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/guideline_connect_way"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constrainedHeight="true"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintVertical_bias="0.15"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/to_server_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_corners_white"
        android:elevation="3dp"
        android:layout_marginTop="30dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constrainedHeight="true"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_text_view"
        app:constraint_referenced_ids="to_server_image, to_server_title, to_server_subtitle"/>

    <ImageView
        android:id="@+id/to_server_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/icon_to_server"
        android:scaleType="fitCenter"
        android:tint="@color/identityColor"
        android:padding="3dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constrainedHeight="true"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintTop_toTopOf="@id/to_server_group"
        app:layout_constraintLeft_toLeftOf="@id/to_server_group"
        app:layout_constraintRight_toRightOf="@id/to_server_group"
        app:layout_constraintBottom_toTopOf="@id/to_server_title"/>

    <TextView
        android:id="@+id/to_server_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_server_way"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/to_server_image"
        app:layout_constraintLeft_toLeftOf="@id/to_server_group"
        app:layout_constraintRight_toRightOf="@id/to_server_group"
        app:layout_constraintBottom_toTopOf="@id/to_server_subtitle"/>

    <TextView
        android:id="@+id/to_server_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/to_server_way_subtitle"
        android:textColor="@color/darkGray"
        android:textSize="12sp"
        android:gravity="center"
        app:layout_constrainedWidth="true"
        app:layout_constraintWidth_percent="0.65"
        app:layout_constraintTop_toBottomOf="@id/to_server_title"
        app:layout_constraintLeft_toLeftOf="@id/to_server_group"
        app:layout_constraintRight_toRightOf="@id/to_server_group"
        app:layout_constraintBottom_toBottomOf="@id/to_server_group"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/from_client_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/rounded_corners_white"
        android:elevation="3dp"
        android:layout_marginTop="50dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constrainedHeight="true"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/to_server_group"
        app:constraint_referenced_ids="from_client_image, from_client_title, from_client_subtitle"/>

    <ImageView
        android:id="@+id/from_client_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/icon_from_client"
        android:scaleType="fitCenter"
        android:tint="@color/identityColor"
        android:padding="3dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constrainedHeight="true"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintTop_toTopOf="@id/from_client_group"
        app:layout_constraintLeft_toLeftOf="@id/from_client_group"
        app:layout_constraintRight_toRightOf="@id/from_client_group"
        app:layout_constraintBottom_toTopOf="@id/from_client_title"/>

    <TextView
        android:id="@+id/from_client_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_client_way"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/from_client_image"
        app:layout_constraintLeft_toLeftOf="@id/from_client_group"
        app:layout_constraintRight_toRightOf="@id/from_client_group"
        app:layout_constraintBottom_toTopOf="@id/from_client_subtitle"/>

    <TextView
        android:id="@+id/from_client_subtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/from_client_way_subtitle"
        android:textColor="@color/darkGray"
        android:textSize="12sp"
        android:gravity="center"
        app:layout_constrainedWidth="true"
        app:layout_constraintWidth_percent="0.65"
        app:layout_constraintTop_toBottomOf="@id/from_client_title"
        app:layout_constraintLeft_toLeftOf="@id/from_client_group"
        app:layout_constraintRight_toRightOf="@id/from_client_group"
        app:layout_constraintBottom_toBottomOf="@id/from_client_group"/>
</androidx.constraintlayout.widget.ConstraintLayout>