<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.testing.BluetoothChatActivity">

    <!-- connect progress layout -->
    <androidx.constraintlayout.widget.Group
        android:id="@+id/connect_progress_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="text_message, progress_bar" />

    <TextView
        android:id="@+id/text_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_connect_message"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.4"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_message"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/text_message"/>

    <!-- connect fail layout -->
    <androidx.constraintlayout.widget.Group
        android:id="@+id/connect_fail_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="
            fail_image_view,
            connect_fail_text_view,
            btn_re_connect,
            info_1,
            troubleshooting_text,
            case_raspberrypi,
            raspberrypi_troubleshooting_1,
            raspberrypi_troubleshooting_1_text,
            raspberrypi_troubleshooting_2,
            raspberrypi_troubleshooting_2_text"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/fail_image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/icon_warning_48"
        app:layout_constrainedWidth="true"
        app:layout_constraintWidth_percent="0.08"
        app:layout_constrainedHeight="true"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/connect_fail_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_fail"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:layout_marginStart="10dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintLeft_toRightOf="@+id/fail_image_view"
        app:layout_constraintTop_toTopOf="@id/fail_image_view" />

    <TextView
        android:id="@+id/troubleshooting_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/connect_troubleshooting"
        android:textSize="12sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintLeft_toLeftOf="@id/connect_fail_text_view"
        app:layout_constraintTop_toBottomOf="@id/connect_fail_text_view"/>

    <ImageView
        android:id="@+id/info_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/icon_info_48"
        android:layout_marginTop="30dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintWidth_percent="0.08"
        app:layout_constrainedHeight="true"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0.04"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/troubleshooting_text"/>

    <TextView
        android:id="@+id/case_raspberrypi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_to_raspberrypi"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center_vertical"
        android:layout_marginStart="10dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintLeft_toRightOf="@+id/info_1"
        app:layout_constraintTop_toTopOf="@id/info_1" />

    <TextView
        android:id="@+id/raspberrypi_troubleshooting_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="1. "
        app:layout_constraintLeft_toLeftOf="@id/case_raspberrypi"
        app:layout_constraintTop_toBottomOf="@id/case_raspberrypi"/>

    <TextView
        android:id="@+id/raspberrypi_troubleshooting_1_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/raspberrypi_troubleshooting_1"
        android:textSize="12sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintWidth_percent="0.77"
        app:layout_constraintLeft_toRightOf="@id/raspberrypi_troubleshooting_1"
        app:layout_constraintTop_toBottomOf="@id/case_raspberrypi"/>

    <TextView
        android:id="@+id/raspberrypi_troubleshooting_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginTop="20dp"
        android:text="2. "
        app:layout_constraintLeft_toLeftOf="@id/case_raspberrypi"
        app:layout_constraintTop_toBottomOf="@id/raspberrypi_troubleshooting_1_text"/>

    <TextView
        android:id="@+id/raspberrypi_troubleshooting_2_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/raspberrypi_troubleshooting_2"
        android:textSize="12sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintWidth_percent="0.77"
        app:layout_constraintLeft_toRightOf="@id/raspberrypi_troubleshooting_2"
        app:layout_constraintTop_toTopOf="@id/raspberrypi_troubleshooting_2"/>

    <Button
        android:id="@+id/btn_re_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FF0000"
        android:text="@string/re_connect"
        android:textColor="@color/identityColor"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.95"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <!-- communication layout -->
    <androidx.constraintlayout.widget.Group
        android:id="@+id/communication_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="remote_device_panel,
         image_view,
         name_text_view,
         address_text_view,
         chat_view,
         panel_margin,
         panel,
         edit_text,
         btn_send,
         send_btn_image_view"
        android:visibility="gone"/>

    <View
        android:id="@+id/remote_device_panel"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@drawable/bottom_stroke_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:padding="20dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintLeft_toLeftOf="@id/remote_device_panel"
        app:layout_constraintTop_toTopOf="@id/remote_device_panel"
        app:layout_constraintBottom_toBottomOf="@id/remote_device_panel"/>

    <TextView
        android:id="@+id/name_text_view"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:gravity="bottom"
        app:layout_constrainedWidth="true"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintTop_toTopOf="@id/remote_device_panel"
        app:layout_constraintLeft_toRightOf="@id/image_view"/>

    <TextView
        android:id="@+id/address_text_view"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:textSize="12sp"
        android:gravity="top"
        android:paddingTop="2dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintLeft_toRightOf="@id/image_view"
        app:layout_constraintTop_toBottomOf="@id/name_text_view"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chat_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/remote_device_panel"
        app:layout_constraintBottom_toTopOf="@+id/panel_margin">
    </androidx.recyclerview.widget.RecyclerView>

    <View
        android:id="@+id/panel_margin"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@drawable/chat_edit_text_panel"
        app:layout_constraintBottom_toTopOf="@+id/panel"/>

    <View
        android:id="@+id/panel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_text"/>

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHeight_max="100dp"
        app:layout_constraintHeight_min="30dp"
        android:background="@drawable/chat_edit_text"
        android:textSize="14sp"
        android:layout_marginBottom="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:inputType="textMultiLine"
        android:scrollHorizontally="false"
        app:layout_constrainedWidth="true"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.25"/>

    <ImageButton
        android:id="@+id/btn_send"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:src="@drawable/icon_send_btn_blue"
        android:scaleType="centerInside"
        android:background="#00FF0000"
        app:layout_constrainedWidth="true"
        app:layout_constraintWidth_percent="0.15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/edit_text"/>

    <ImageView
        android:id="@+id/send_btn_image_view"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:src="@drawable/icon_send_btn_gray"
        android:scaleType="centerInside"
        app:layout_constrainedWidth="true"
        app:layout_constraintWidth_percent="0.15"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/edit_text"/>
</androidx.constraintlayout.widget.ConstraintLayout>